test/files/neg/t5493.scala
object Test {
  def meh(xs: Any): Any = xs :: iDontExist :: Nil
}
