test/files/neg/t5493.check
t5493.scala:2: error: not found: value iDontExist
  def meh(xs: Any): Any = xs :: iDontExist :: Nil
                                ^
one error found
